# ultimate-tic-tac-toe

./: README.md  io.github.nokse22.tactics.json  io.github.nokse22.ultimate-tactic.json  io.github.nokse22.ultimate-tic-tac-toe.json  meson.build
.github/workflows/: flatpak.yml  snap.yml
data/: io.github.nokse22.tactics.desktop.in  io.github.nokse22.tactics.gschema.xml  io.github.nokse22.tactics.metainfo.xml.in  io.github.nokse22.ultimate-tactic.desktop.in  io.github.nokse22.ultimate-tactic.gschema.xml  io.github.nokse22.ultimate-tactic.metainfo.xml.in  io.github.nokse22.ultimate-tic-tac-toe.desktop.in  io.github.nokse22.ultimate-tic-tac-toe.gschema.xml  io.github.nokse22.ultimate-tic-tac-toe.metainfo.xml.in  meson.build  style.css  ultimate-tic-tac-toe.gresource.xml
data/icons/: meson.build
data/ui/: tic_button.ui  tic_tac_toe_grid.ui  window.ui
po/: LINGUAS  POTFILES  bg.po  es.po  hi.po  it.po  meson.build  nl.po  pl.po  pt_BR.po  ru.po  ultimate-tic-tac-toe.pot
src/: main.py  meson.build  player_id_enum.py  tactics.gresource.xml  tactics.in  tic_button.py  tic_tac_toe_grid.py  ultimate-tactic.gresource.xml  ultimate-tactic.in  ultimate-tic-tac-toe.gresource.xml  ultimate-tic-tac-toe.in  window.py
src/ui/: tic_tac_toe_grid.ui  window.ui
